--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -27,8 +23,6 @@ share/python-wheels/
 PIPFILE.lock
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -83,33 +77,18 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+poetry.lock
 
 # pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582
 __pypackages__/
 
 # Celery stuff
@@ -153,43 +132,20 @@ dmypy.json
 cython_debug/
 
 # PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be added to the global gitignore or merged into this project gitignore.  For a PyCharm
-#  project, it is recommended to use the following settings:
-#  https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and add them here:
 .idea/
-*.iws
-*.iml
-*.ipr
 
-# Visual Studio Code
+# VS Code
 .vscode/
 
 # Project specific
-# Debug files
 debug/
-*.log
-
-# Output files
 output/
-*.csv
-
-# Model files (large binary files)
-models/
-*.pth
-*.pkl
-*.model
-
-# Data files (may contain sensitive information)
-data/
-*.csv
-*.xlsx
-*.xls
+*.log
 
 # Temporary files
 *.tmp
 *.temp
+*~
 
 # OS generated files
 .DS_Store
@@ -199,12 +155,3 @@ data/
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Gurobi log files
-gurobi.log
-*.ilp
-*.lp
-*.mps
-
-# Attention improved folder (as requested by user)
-attention_improve/
